fix FF layout issue

--- a/app/assets/stylesheets/global/style.css
+++ b/app/assets/stylesheets/global/style.css
@@ -1,4 +1,3 @@
-
 /*
 Design by Free CSS Templates
 http://www.freecsstemplates.org
@@ -12,9 +11,9 @@ body {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 14px;
 	color: #6F6F6F;
-  height:100%;
-  width:100%;
-  text-rendering: optimizeLegibility;
+	height:100%;
+	width:99.4%;
+	text-rendering: optimizeLegibility;
 }
 
 h1, h2, h3, h4, h5 {
